criando input para definir a quantidade de caracteres que a chave deve ter

--- a/index.html
+++ b/index.html
@@ -9,12 +9,18 @@
 </head>
 <body>
     <form>
+        <label for="quantidade">Quantidade de caracteres: (min. 6 - máx. 32)</label>
+        <input type="number" value="6" id="quantidade" onblur="verificarQuantidade()" onchange="verificarQuantidade()"/>
+
         <label for="numeros" title="0 ... 9">Números (0-9)</label>
         <input type="checkbox" id="numeros" checked/>
+
         <label for="minusculas" title="a ... z">Letras minúsculas (a-z)</label>
         <input type="checkbox" id="minusculas" checked/>
+
         <label for="maiusculas" title="A ... Z">Letras maiúsculas (A-Z)</label>
         <input type="checkbox" id="maiusculas" checked/>
+
         <label for="especiais" title="! ? @ # $ % & * - _ + = / .">Caracteres especiais</label>
         <input type="checkbox" id="especiais" checked/>
     </form>
